<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="match_date" type="id"/>
    <item name="home_team" type="id"/>
    <item name="home_score" type="id"/>
    <item name="away_score" type="id"/>
    <item name="away_team" type="id"/>
    <item name="match_detail_date" type="id"/>
    <item name="match_detail_home_image" type="id"/>
    <item name="match_detail_home_team_name" type="id"/>
    <item name="match_detail_score" type="id"/>
    <item name="match_detail_away_image" type="id"/>
    <item name="match_detail_away_team_name" type="id"/>
    <item name="match_detail_home_goals_detail" type="id"/>
    <item name="match_detail_away_goals_detail" type="id"/>
    <item name="match_detail_home_shots" type="id"/>
    <item name="match_detail_away_shots" type="id"/>
    <item name="main_progress_bar" type="id"/>
    <item name="detail_progress_bar" type="id"/>
    <item name="match_detail_home_score" type="id"/>
    <item name="match_detail_away_score" type="id"/>
    <item name="match_detail_home_gk" type="id"/>
    <item name="match_detail_away_gk" type="id"/>
    <item name="match_detail_home_defense" type="id"/>
    <item name="match_detail_away_defense" type="id"/>
    <item name="match_detail_home_mid" type="id"/>
    <item name="match_detail_away_mid" type="id"/>
    <item name="match_detail_home_forward" type="id"/>
    <item name="match_detail_away_forward" type="id"/>
    <item name="detail_scroll_view" type="id"/>
    <item name="list_favorite" type="id"/>
    <item name="list_event" type="id"/>
    <item name="league_spinner" type="id"/>
    <item name="team_row_badge" type="id"/>
    <item name="team_row_name" type="id"/>
    <item name="team_spinner" type="id"/>
    <item name="list_team" type="id"/>
    <item name="team_progress_bar" type="id"/>
    <item name="team_overview_desc" type="id"/>
    <item name="player_row_cutout" type="id"/>
    <item name="player_row_name" type="id"/>
    <item name="player_row_position" type="id"/>
    <item name="list_player" type="id"/>
    <item name="list_player_progress_bar" type="id"/>
    <item name="match_time" type="id"/>
    <item name="match_detail_time" type="id"/>
    <item name="match_empty_view" type="id"/>
    <item name="player_empty_view" type="id"/>
</resources>