<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/matches"
            android:enabled="true"
            android:title="@string/past_matches"
            android:icon="@drawable/ic_matches"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/teams"
            android:enabled="true"
            android:title="@string/next_matches"
            android:icon="@drawable/ic_group_black_24dp"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/favorites"
            android:enabled="true"
            android:icon="@drawable/ic_favorites"
            android:title="@string/favorites"
            app:showAsAction="ifRoom" />
</menu>